Apply own styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #f4bd8d;
+      background-color: #FFFAEA;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #000000;
     }
@@ -16,15 +16,27 @@
       margin: 0 auto;
       width: 700px;
     }
-    h1 { font-size: 3.8em; color: #0b4272; margin-bottom: 3px; }
+    h1 {
+        font-size: 3.8em;
+        color: #0b4272;
+        margin-bottom: 3px;
+        border-bottom: 4px solid #ed1b24;
+    }
     h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
+    h1 a {
+        text-decoration: none;
+        color: #111;
+    }
     h2 { font-size: 1.5em; color: #0b4272; }
     h3 { text-align: center; color: #0b4272; }
     a { color: #0b4272; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
+    .description {
+        font-size: 1.2em;
+        margin-bottom: 30px;
+        margin-top: 10px;
+    }
     .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
+    pre { background: #222; color: #fff; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
@@ -34,27 +46,27 @@
   <a href="https://github.com/dkobozev/tatlin"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
+    <h1><a href="https://github.com/dkobozev/tatlin">Татлин</a></h1>
+
+    <div class="description">
+      Tatlin is a Gcode and STL viewer for 3D printing
+    </div>
+
+    <h2>See</h2>
+    <p>[screenshots]</p>
+
     <div class="download">
       <a href="https://github.com/dkobozev/tatlin/zipball/master">
         <img border="0" width="90" src="https://github.com/images/modules/download/zip.png"></a>
       <a href="https://github.com/dkobozev/tatlin/tarball/master">
         <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
     </div><!-- .download -->
-
-    <h1><a href="https://github.com/dkobozev/tatlin">ТАТЛИН</a></h1>
-
-    <div class="description">
-      Tatlin is a Gcode and STL viewer heavily inspired by Mac-only software Pleasant3D. Besides viewing, it also supports rotating and scaling of STL files. It is currently in early stages of development, but should already be quite usable.
-    </div>
-
-    <h2>See</h2>
-    <p>[screenshots]</p>
-
     <h2>Download</h2>
+
     <p>
       You can download this project in either
       <a href="https://github.com/dkobozev/tatlin/zipball/master">zip</a> or
-      <a href="https://github.com/dkobozev/tatlin/tarball/master">tar formats.
+      <a href="https://github.com/dkobozev/tatlin/tarball/master">tar formats</a>:
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
