Widen the layout

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
     #container {
       margin: 0 auto;
-      width: 700px;
+      width: 1000px;
     }
     h1 {
         font-size: 3.8em;
@@ -29,7 +29,7 @@
         text-decoration: none;
         color: #111;
     }
-    h2 { font-size: 1.5em; color: #0b4272; }
+    h2 { font-size: 1.5em; color: #000; }
     h3 { text-align: center; color: #0b4272; }
     a { color: #0b4272; }
     .description {
@@ -43,10 +43,10 @@
     .screenshots {
         text-align: left;
         margin: 0 auto 26px auto;
-        width: 516px;
+        width: 976px;
     }
     .screenshots img {
-        margin: 13px;
+        margin: 5px;
         border: 1px solid #fff;
         -moz-box-shadow: 0 0 2px #000;
         -webkit-box-shadow: 0 0 2px #000;
