Update Windows installation instructions

--- a/index.html
+++ b/index.html
@@ -120,14 +120,13 @@
 
     <h3>Windows</h3>
 
-    <ol>
-        <li>Download and install the latest Python 2 interpreter from <a target="_blank" href="https://www.python.org/downloads/windows/">Python.org</a></li>
-        <li>Download and install <a href="http://wxpython.org/download.php#msw" target="_blank">wxPython</a></li>
-        <li>Download and install PyOpenGL and PyOpenGL-accelerate. You can try installing these packages using pip:
-            <pre><code>pip.exe install PyOpenGL PyOpenGL_accelerate</code></pre>
+    <p>Make sure all the installers match the flavor of the Python interpreter you selected (32 or 64 bit).</p>
 
-            or, if that doesn't work, download the unofficial installers from <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/#pyopengl" target="_blank">www.lfd.uci.edu/~gohlke/pythonlibs/</a></li>
-        <li>Download and install the latest NumPy superpack from <a href="http://sourceforge.net/projects/numpy/files/NumPy/" target="_blank">SourceForge</a></li>
+    <ol>
+        <li>Download and install the latest Python 2 interpreter from <a target="_blank" href="https://www.python.org/downloads/windows/">Python.org</a>. During the install, select the option to add Python to your PATH.</li>
+        <li>Download and install <a href="http://wxpython.org/download.php#msw" target="_blank">wxPython</a></li>
+        <li>Download and install PyOpenGL and PyOpenGL-accelerate from <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/#pyopengl" target="_blank">www.lfd.uci.edu/~gohlke/pythonlibs/</a></li>
+        <li>Download and install NumPy from <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/#numpy" target="_blank">www.lfd.uci.edu/~gohlke/pythonlibs/</a></li>
     </ol>
 
     <p>Run:</p>
