--- a/index.html
+++ b/index.html
@@ -81,58 +81,47 @@
         <a href="images/screenshots/stl.png"><img src="images/screenshots/stl-thumb.png" alt="Displaying an STL file" /></a>
     </p>
 
-    <div class="download">
-      <a href="https://github.com/dkobozev/tatlin/zipball/master">
-        <img border="0" width="90" src="https://github.com/images/modules/download/zip.png"></a>
-      <a href="https://github.com/dkobozev/tatlin/tarball/master">
-        <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
-    </div><!-- .download -->
-    <h2>Download</h2>
-
-    <p>
-      You can download this project in either
-      <a href="https://github.com/dkobozev/tatlin/zipball/master">zip</a> or
-      <a href="https://github.com/dkobozev/tatlin/tarball/master">tar formats</a>:
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/dkobozev/tatlin</pre>
-    </p>
-
     <h2>Install</h2>
-    <p>Tatlin runs on Linux, Windows and MacOS X. It depends on the following packages:</p>
-    <ul>
-        <li>Python 2.6+</li>
-        <li>wxPython 2.9+</li>
-        <li>PyOpenGL</li>
-        <li>NumPy</li>
-    </ul>
+        <p>Tatlin runs on <a href="#h-arch">Linux</a>, <a href="#h-windows">Windows</a> and <a href="#h-mac">MacOS X</a>. It depends on the following packages:</p>
 
-    <h3>Arch Linux</h3>
+        <ul>
+            <li>Python 2.6+</li>
+            <li>wxPython 2.9+</li>
+            <li>PyOpenGL</li>
+            <li>NumPy</li>
+        </ul>
+
+    <h3 id="h-arch">Arch Linux</h3>
     <p>Install dependencies:</p>
     <pre><code>$ sudo pacman -S python2 wxpython python2-opengl python2-numpy</code></pre>
 
     <p>Run:</p>
-    <pre><code>$ python tatlin.py</code></pre>
+    <pre><code>$ python2 tatlin.py</code></pre>
 
     <p>You can also provide a filename to load:</p>
-    <pre><code>$ python tatlin.py foobar.stl</code></pre>
+    <pre><code>$ python2 tatlin.py foobar.stl</code></pre>
 
-    <h3>Windows</h3>
+    <h3 id="h-windows">Windows</h3>
 
-    <p>Make sure all the installers match the flavor of the Python interpreter you selected (32 or 64 bit).</p>
+        <h4>Self-contained executable</h4>
 
-    <ol>
-        <li>Download and install the latest Python 2 interpreter from <a target="_blank" href="https://www.python.org/downloads/windows/">Python.org</a>. During the install, select the option to add Python to your PATH.</li>
-        <li>Download and install <a href="http://wxpython.org/download.php#msw" target="_blank">wxPython</a></li>
-        <li>Download and install PyOpenGL and PyOpenGL-accelerate from <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/#pyopengl" target="_blank">www.lfd.uci.edu/~gohlke/pythonlibs/</a></li>
-        <li>Download and install NumPy from <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/#numpy" target="_blank">www.lfd.uci.edu/~gohlke/pythonlibs/</a></li>
-    </ol>
+            <p>The self-contained archive contains all of the dependencies, including the Python interpreter. Download <a href="tatlin-win32-0.2.4.zip">tatlin-win32-0.2.4.zip</a>, unpack and run <code>tatlin.exe</code>.</p>
 
-    <p>Run:</p>
-    <pre><code>python.exe tatlin.py</code></pre>
+        <h4>Manual installation</h4>
 
-    <h3>Mac OS X</h3>
+        <p>If you you already have some of the dependencies installed or don't want the self-contained executable for some other reason, you can install Tatlin manually. Make sure all the installers match the flavor of the Python interpreter you selected (32 or 64 bit).</p>
+
+        <ol>
+            <li>Download and install the latest Python 2 interpreter from <a target="_blank" href="https://www.python.org/downloads/windows/">Python.org</a>. During the install, select the option to add Python to your PATH.</li>
+            <li>Download and install <a href="http://wxpython.org/download.php#msw" target="_blank">wxPython</a></li>
+            <li>Download and install PyOpenGL and PyOpenGL-accelerate from <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/#pyopengl" target="_blank">www.lfd.uci.edu/~gohlke/pythonlibs/</a></li>
+            <li>Download and install NumPy from <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/#numpy" target="_blank">www.lfd.uci.edu/~gohlke/pythonlibs/</a></li>
+        </ol>
+
+        <p>Run:</p>
+        <pre><code>python.exe tatlin.py</code></pre>
+
+    <h3 id="h-mac">Mac OS X</h3>
 
     <p>I was able to install Tatlin on Mac OS X Mountain Lion using the preinstalled Python 2.7.2 and NumPy 1.6.1.</p>
 
@@ -148,6 +137,26 @@
 
     <p>Run:</p>
     <pre><code>$ python tatlin.py</code></pre>
+
+    <div class="download">
+      <a href="https://github.com/dkobozev/tatlin/zipball/master">
+        <img border="0" width="90" src="https://github.com/images/modules/download/zip.png"></a>
+      <a href="https://github.com/dkobozev/tatlin/tarball/master">
+        <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
+    </div><!-- .download -->
+
+    <h2>Get the source</h2>
+
+    <p>
+      You can download this project in either
+      <a href="https://github.com/dkobozev/tatlin/zipball/master">zip</a> or
+      <a href="https://github.com/dkobozev/tatlin/tarball/master">tar formats</a>:
+    </p>
+    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
+      by running:
+      <pre>$ git clone git://github.com/dkobozev/tatlin</pre>
+    </p>
+
 
     <h2>License</h2>
     <p>Tatlin is licensed under GPLv2 or later.</p>
