--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <h1><a href="https://github.com/dkobozev/tatlin">Татлин</a></h1>
 
     <div class="description">
-      Tatlin is a multiplatform Gcode and STL viewer for 3D printing
+      Tatlin is a multi-platform Gcode and STL viewer for 3D printing
     </div>
 
     <h2>See</h2>
