Add redirect to tatlin3d.com

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset='utf-8'>
 
+  <meta http-equiv="refresh" content="0; URL=https://tatlin3d.com/">
+  <link rel="canonical" href="https://tatlin3d.com/">
+
   <title>dkobozev/tatlin @ GitHub</title>
 
   <link rel="stylesheet" type="text/css" href="css/jquery.lightbox-0.5.css" media="screen" />
