Add comment to trigger gh-pages deployment

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
+  <!-- redirect the user to the new site -->
   <meta http-equiv="refresh" content="0; URL=https://tatlin3d.com/">
   <link rel="canonical" href="https://tatlin3d.com/">
 
