Remove the contents of index.html to improve the redirect UX

--- a/index.html
+++ b/index.html
@@ -9,186 +9,6 @@
 
   <title>dkobozev/tatlin @ GitHub</title>
 
-  <link rel="stylesheet" type="text/css" href="css/jquery.lightbox-0.5.css" media="screen" />
-
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #FFFAEA;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 1000px;
-    }
-    h1 {
-        font-size: 3.8em;
-        color: #0b4272;
-        margin-bottom: 3px;
-        border-bottom: 4px solid #ed1b24;
-    }
-    h1 .small { font-size: 0.4em; }
-    h1 a {
-        text-decoration: none;
-        color: #111;
-    }
-    h2 { font-size: 1.5em; color: #000; }
-    h3 { color: #000; }
-    a { color: #0b4272; }
-    .description {
-        font-size: 1.2em;
-        margin-bottom: 30px;
-        margin-top: 10px;
-    }
-    .download { float: right; }
-    pre { background: #222; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .screenshots {
-        text-align: left;
-        margin: 0 auto 26px auto;
-        width: 976px;
-    }
-    .screenshots img {
-        margin: 5px;
-        border: 1px solid #fff;
-        -moz-box-shadow: 0 0 2px #000;
-        -webkit-box-shadow: 0 0 2px #000;
-    }
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-</style>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
-    <script src="js/jquery.lightbox-0.5.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $(".screenshots a").lightBox();
-        });
-    </script>
-</head>
-
-<body>
-  <a href="https://github.com/dkobozev/tatlin"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
-  <div id="container">
-    <h1><a href="https://github.com/dkobozev/tatlin">Татлин</a></h1>
-
-    <div class="description">
-      Tatlin is a multi-platform Gcode and STL viewer for 3D printing
-    </div>
-
-    <h2>See</h2>
-    <p class="screenshots">
-        <a href="images/screenshots/gcode-overview.png"><img src="images/screenshots/gcode-overview-thumb.png" alt="Displaying a Gcode file" /></a>
-        <a href="images/screenshots/gcode-layers.png"><img src="images/screenshots/gcode-layers-thumb.png" alt="The number of layers to display can be adjusted" /></a>
-        <a href="images/screenshots/gcode-2d.png"><img src="images/screenshots/gcode-2d-thumb.png" alt="Each layer can be displayed in 2D for closer examination" /></a>
-        <a href="images/screenshots/stl.png"><img src="images/screenshots/stl-thumb.png" alt="Displaying an STL file" /></a>
-    </p>
-
-    <h2>Install</h2>
-        <p>Tatlin runs on <a href="#h-arch">Linux</a>, <a href="#h-windows">Windows</a> and <a href="#h-mac">MacOS X</a>. It depends on the following packages:</p>
-
-        <ul>
-            <li>Python 2.6+</li>
-            <li>wxPython 2.8+</li>
-            <li>PyOpenGL</li>
-            <li>NumPy</li>
-        </ul>
-
-    <h3 id="h-arch">Arch Linux</h3>
-    <p>Install dependencies:</p>
-    <pre><code>$ sudo pacman -S python2 wxpython python2-opengl python2-numpy</code></pre>
-
-    <p>Run:</p>
-    <pre><code>$ python2 tatlin.py</code></pre>
-
-    <p>You can also provide a filename to load:</p>
-    <pre><code>$ python2 tatlin.py foobar.stl</code></pre>
-
-    <h3 id="h-windows">Windows</h3>
-
-        <h4>Self-contained executable</h4>
-
-            <ul>
-                <li><a href="tatlin-win32-0.2.5.zip">tatlin-win32-0.2.5.zip</a></li>
-            </ul>
-
-            <p>The self-contained archive contains all of the dependencies, including the Python interpreter. Download, unpack and run <code>tatlin.exe</code>.</p>
-
-        <h4>Manual installation</h4>
-
-        <p>If you you already have some of the dependencies installed or don't want the self-contained executable for some other reason, you can install Tatlin manually. Make sure all the installers match the flavor of the Python interpreter you selected (32 or 64 bit).</p>
-
-        <ol>
-            <li>Download and install the latest Python 2 interpreter from <a target="_blank" href="https://www.python.org/downloads/windows/">Python.org</a>. During the install, select the option to add Python to your PATH.</li>
-            <li>Download and install <a href="http://wxpython.org/download.php#msw" target="_blank">wxPython</a></li>
-            <li>Download and install PyOpenGL and PyOpenGL-accelerate from <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/#pyopengl" target="_blank">www.lfd.uci.edu/~gohlke/pythonlibs/</a></li>
-            <li>Download and install NumPy from <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/#numpy" target="_blank">www.lfd.uci.edu/~gohlke/pythonlibs/</a></li>
-        </ol>
-
-        <p>Run:</p>
-        <pre><code>python.exe tatlin.py</code></pre>
-
-    <h3 id="h-mac">Mac OS X</h3>
-
-    <h4>Application bundle</h4>
-
-        <ul>
-            <li><a href="tatlin-MacOS-X-10.6+-0.2.5.zip">tatlin-MacOS-X-10.6+-0.2.5.zip</a></li>
-        </ul>
-
-        <p>Self-contained executable that includes all the dependencies. Unzip and run <code>tatlin.app</code>.</p>
-
-    <h4>Manual installation</h4>
-
-        <p>I was able to install Tatlin on Mac OS X Mountain Lion using the preinstalled Python 2.7.2 and NumPy 1.6.1.</p>
-
-        <ol>
-            <li>Download and install <a href="http://www.wxpython.org/download.php#osx" target="_blank">wxPython</a>. If you're not sure which package you need, download the Cocoa version. Because the installer is not signed, you need to turn off Gatekeeper (System Preferences -&gt; Security &amp; Privacy -&gt; General, select "Allow app downloads from: Anywhere") prior to the installation. Check out <a href="http://stackoverflow.com/questions/21223717/install-wxpython-on-mac-os-mavericks" target="_blank">StackOverflow</a> for more info.</li>
-            <li>Install PyOpenGL using <a href="https://pip.pypa.io/en/latest/installing.html" target="_blank">pip</a>:
-                <pre><code>$ pip install PyOpenGL</code></pre>
-
-                To install PyOpenGL-accelerate, first download Command Line Tools for Xcode or Xcode from the <a href="http://developer.apple.com/downloads" target="_blank">Apple Developer portal</a>.
-                <pre><code>$ pip install PyOpenGL_accelerate</code></pre>
-            </li>
-        </ol>
-
-        <p>Run:</p>
-        <pre><code>$ python tatlin.py</code></pre>
-
-    <div class="download">
-      <a href="https://github.com/dkobozev/tatlin/zipball/master">
-        <img border="0" width="90" src="https://github.com/images/modules/download/zip.png"></a>
-      <a href="https://github.com/dkobozev/tatlin/tarball/master">
-        <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
-    </div><!-- .download -->
-
-    <h2>Get the source</h2>
-
-    <p>
-      You can download this project in either
-      <a href="https://github.com/dkobozev/tatlin/zipball/master">zip</a> or
-      <a href="https://github.com/dkobozev/tatlin/tarball/master">tar formats</a>:
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/dkobozev/tatlin</pre>
-    </p>
-
-
-    <h2>License</h2>
-    <p>Tatlin is licensed under GPLv2 or later.</p>
-
-
-    <h2>Contact me</h2>
-    <ul>
-        <li>Open a new issue on <a href="https://github.com/dkobozev/tatlin/issues">GitHub</a></li>
-        <li>Denis Kobozev (d.v.kobozev at gmail.com)</li>
-    </ul>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="https://github.com/dkobozev/tatlin">dkobozev/tatlin</a>
-    </div>
-  </div>
+  <h1>The new home of Tatlin is <a href="https://tatlin3d.com/">tatlin3d.com</a>. Redirecting...</h1>
 </body>
 </html>
